案件の情報を追加したので、テーブルなどを修正
