# internal/model/model.go
@@ -1,6 +1,9 @@
 package model
 
 import (
+	"database/sql/driver"
+	"encoding/json"
+	"errors"
 	"time"
 
 	"github.com/google/uuid"
@@ -36,18 +39,56 @@ type User struct {
 // @Description 案件情報
 type Case struct {
 	gorm.Model
-	ID              uuid.UUID `gorm:"type:uuid;primary_key;default:gen_random_uuid()"`
-	UserID          uuid.UUID `gorm:"not null"` // 案件の依頼者
-	Title           string    `gorm:"not null"`
-	Description     string    `gorm:"not null"`
-	Reward          int       `gorm:"not null"`
-	Location        string    `gorm:"not null"`
-	ScheduledDate   time.Time `gorm:"not null"`
-	DurationMinutes int       `gorm:"not null"`
-	Status          string    `gorm:"default:open"`
-	CreatedAt       time.Time `gorm:"default:CURRENT_TIMESTAMP"`
-	UpdatedAt       time.Time `gorm:"default:CURRENT_TIMESTAMP"`
-	User            User      `gorm:"foreignkey:UserID"`
+	ID             uuid.UUID `gorm:"type:uuid;primary_key;default:gen_random_uuid()"`
+	UserID         uuid.UUID `gorm:"not null"` // 案件の依頼者
+	Title          string    `gorm:"not null;size:100"`
+	Description    string    `gorm:"not null;size:2000"`
+	Category       string    `gorm:"not null"`
+	Reward         int       `gorm:"not null;check:reward >= 500 AND reward <= 100000"`
+	RequiredPeople int       `gorm:"not null;check:required_people >= 1 AND required_people <= 10"`
+	ScheduledDate  time.Time `gorm:"not null"`
+	StartTime      string    `gorm:"not null"`
+	Duration       int       `gorm:"not null;check:duration >= 15 AND duration <= 360"` // 分単位
+	Prefecture     string    `gorm:"not null"`
+	City           string    `gorm:"not null"`
+	Address        string
+	Status         string    `gorm:"default:open"`
+	CreatedAt      time.Time `gorm:"default:CURRENT_TIMESTAMP"`
+	UpdatedAt      time.Time `gorm:"default:CURRENT_TIMESTAMP"`
+	User           User      `gorm:"foreignkey:UserID"`
+}
+
+type CreateCaseRequest struct {
+	Title          string    `json:"title" binding:"required,max=100"`
+	Description    string    `json:"description" binding:"required,max=2000"`
+	Category       string    `json:"category" binding:"required"`
+	Reward         int       `json:"reward" binding:"required,min=500,max=100000"`
+	RequiredPeople int       `json:"requiredPeople" binding:"required,min=1,max=10"`
+	ScheduledDate  time.Time `json:"scheduledDate" binding:"required"`
+	StartTime      string    `json:"startTime" binding:"required"`
+	Duration       int       `json:"duration" binding:"required,min=15,max=360"`
+	Prefecture     string    `json:"prefecture" binding:"required"`
+	City           string    `json:"city" binding:"required"`
+	Address        string    `json:"address"`
+}
+
+type CreateCaseResponse struct {
+	ID             uuid.UUID `json:"id"`
+	UserID         uuid.UUID `json:"userId"`
+	Title          string    `json:"title"`
+	Description    string    `json:"description"`
+	Category       string    `json:"category"`
+	Reward         int       `json:"reward"`
+	RequiredPeople int       `json:"requiredPeople"`
+	ScheduledDate  time.Time `json:"scheduledDate"`
+	StartTime      string    `json:"startTime"`
+	Duration       int       `json:"duration"`
+	Prefecture     string    `json:"prefecture"`
+	City           string    `json:"city"`
+	Address        string    `json:"address"`
+	Status         string    `json:"status"`
+	CreatedAt      time.Time `json:"createdAt"`
+	UpdatedAt      time.Time `json:"updatedAt"`
 }
 
 // Application 応募モデル
@@ -120,4 +161,18 @@ type DeviceInfo struct {
 	ClientName   string `json:"client_name"`             // モバイルアプリ名など
 	DeviceID     string `json:"device_id,omitempty"`     // デバイス識別子（オプション）
 	LastLocation string `json:"last_location,omitempty"` // 最後のアクセス位置（オプション）
+}
+
+func (d *DeviceInfo) Scan(value interface{}) error {
+	bytes, ok := value.([]byte)
+	if !ok {
+		return errors.New("failed to scan DeviceInfo: type assertion to []byte failed")
+	}
+
+	return json.Unmarshal(bytes, &d)
+}
+
+// driver.Valuer インターフェースの実装
+func (d DeviceInfo) Value() (driver.Value, error) {
+	return json.Marshal(d)
 }
